burst.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: dbpod
  labels: 
    app: mysql
    client: abc
    team: sre
spec:
  containers:
  - name: boxone
    image: mysql:latest
    resources:
      limits:
        cpu: 200m
        memory: 400Mi
      requests:
        cpu: 150m
        memory: 256Mi
