dev-webserver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-webserver
spec:
  containers:
    - name: boxone
      image: lovelearnlinux/customweb:v1
      volumeMounts:
      - name: webconfig
        mountPath: /etc/httpd/conf/
  volumes:
    - name: webconfig
      configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
        name: dev-web-config 
  restartPolicy: Never
