excess.yaml

apiVersion: v1
kind: Pod
metadata:
  name: toomuch
spec:
  containers:
  - name: boxone
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 3
        memory: 3Gi
      requests:
        cpu: 3
        memory: 3Gi
