prod-webserver.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: prod-webserver
  labels: 
    app: apache
    client: abc
    team: sre
spec:
  containers:
  - name: boxone
    image: lovelearnlinux/customweb:v1
    resources:
      limits:
        cpu: 200m
        memory: 400Mi
      requests:
        cpu: 150m
        memory: 256Mi
