startup-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: startup-probe-demo
spec:
  containers:
  - name: startup-probe-demo
    image: busybox:latest
    args:
    - /bin/sh
    - -c
    - sleep 300
    startupProbe:
      exec:
        command:
        - cat
        - /etc/hosttname
      initialDelaySeconds: 10
