thirdpod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: webserverthree
  namespace: dev
spec:
  containers:
  - name: boxone
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 200m
        memory: 200Mi
      requests:
        cpu: 100m
        memory: 100Mi
