readiness-probe.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readiness
  labels:
    app: readiness
spec:
  replicas: 3
  selector:
    matchLabels:
      app: readiness
  template:
    metadata:
      labels:
        app: readiness
    spec:
      containers:
      - name: nginx
        image: lovelearnlinux/webserver:v1
        ports:
        - containerPort: 80
        startupProbe:
          exec:
            command:
            - cat
            - /var/www/html/index.html
          initialDelaySeconds: 5
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - cat
            - /var/www/html/index.html
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 4
          failureThreshold: 2
          successThreshold: 1 
        livenessProbe:
          exec:
            command:
            - cat
            - /var/www/html/index.html
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 4
          failureThreshold: 6
          successThreshold: 1
---

apiVersion: v1
kind: Service
metadata:
  name: readiness-svc
spec:
  selector:
    app: readiness
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
